--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
         "3_Model": "element",
         "4_Presentation": "desktop",
         "CoverImage": "images",
+        "External": "cloudflare",
+        "Internal": "node",
     },
     "jupyter.interactiveWindow.textEditor.executeSelection": true,
     "jupyter.askForKernelRestart": false,
