Paths changed to local and settings.json modified

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "CoverImage": "images",
         "External": "cloudflare",
         "Internal": "node",
+        "Plots": "gradle"
     },
     "jupyter.interactiveWindow.textEditor.executeSelection": true,
     "jupyter.askForKernelRestart": false,
